--- a/styles/FiltersOverview.module.css
+++ b/styles/FiltersOverview.module.css
@@ -1,7 +1,8 @@
 .container {
-  max-width: 160px;
   background: #fff;
   padding: 12px;
+  flex: 0 0 200px;
+  height: fit-content;
 }
 .header {
   margin: 0;
