--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background:#f6f6f6;
+  background: #f6f6f6;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -14,4 +14,21 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+footer {
+  text-align: center;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  background-color: #f6f6f6;
+  left: 0;
+}
+
+footer span {
+  margin-left: 5px;
 }
