--- a/styles/FiltersOverview.module.css
+++ b/styles/FiltersOverview.module.css
@@ -4,6 +4,11 @@
   flex: 0 0 200px;
   height: fit-content;
 }
+@media only screen and (max-width: 700px) {
+  .container {
+    margin-bottom: 16px;
+  }
+}
 .header {
   margin: 0;
   font-weight: bold;
@@ -25,11 +30,15 @@
   max-width: 120px;
   margin: auto;
 }
-.button {
+.button, .buttonSelected {
   width: 50px;
   margin-top: 12px;
   background: #c6e096;
   border: none;
   border-radius: 2px;
   padding: 2px;
+}
+
+.buttonSelected {
+  background: #7dba00;
 }
