--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -7,3 +7,9 @@
 .MainContainer {
   display: flex;
 }
+
+@media only screen and (max-width: 700px) {
+  .MainContainer {
+    flex-direction: column;
+  }
+}
