--- a/styles/FiltersOverview.module.css
+++ b/styles/FiltersOverview.module.css
@@ -6,7 +6,9 @@
 }
 @media only screen and (max-width: 700px) {
   .container {
+    margin: auto;
     margin-bottom: 16px;
+    width: 240px
   }
 }
 .header {
